@@ -23,6 +23,7 @@ import org.bukkit.plugin.java.JavaPlugin;
 import javax.net.ssl.HttpsURLConnection;
 import java.io.*;
 import java.lang.reflect.Method;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
@@ -65,12 +66,13 @@ public class Metrics {
             // Inform the server owners about bStats
             config
                     .options()
-                    .header(
-                            "bStats (https://bStats.org) collects some basic information for plugin authors, like how\n"
-                                    + "many people use their plugin and their total player count. It's recommended to keep bStats\n"
-                                    + "enabled, but if you're not comfortable with this, you can turn this setting off. There is no\n"
-                                    + "performance penalty associated with having metrics enabled, and data sent to bStats is fully\n"
-                                    + "anonymous.")
+                    .setHeader(List.of(
+                            "bStats (https://bStats.org) collects some basic information for plugin authors, like how",
+                            "many people use their plugin and their total player count. It's recommended to keep bStats",
+                            "enabled, but if you're not comfortable with this, you can turn this setting off. There is no",
+                            "performance penalty associated with having metrics enabled, and data sent to bStats is fully",
+                            "anonymous."
+                    ))
                     .copyDefaults(true);
             try {
                 config.save(configFile);
@@ -309,7 +311,7 @@ public class Metrics {
                 infoLogger.accept("Sent bStats metrics data: " + data.toString());
             }
             String url = String.format(REPORT_URL, platform);
-            HttpsURLConnection connection = (HttpsURLConnection) new URL(url).openConnection();
+            HttpsURLConnection connection = (HttpsURLConnection) URI.create(url).toURL().openConnection();
             // Compress the data to save bandwidth
             byte[] compressedData = compress(data.toString());
             connection.setRequestMethod("POST");
